[FeedBack] 2주차 피드백 내용 수정 (#5)
* :memo: Docs: 2주차 피드백 추가

* :bug: Fix: 2주차 피드백 수정
